base mode complete

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -33,3 +33,11 @@
     text-align: center;
     background-color: rgb(108, 27, 139);
   }
+  h1{
+    font-family: 'Macondo', cursive;
+    text-align: center;
+    background-color: rgb(238, 170, 247)
+  }
+  
+   background-color: rgb(238, 170, 247)
+ 
