--- a/server/public/styles/styles.css
+++ b/server/public/styles/styles.css
@@ -29,15 +29,44 @@
     transform: rotateY(180deg);
     box-sizing: border-box;
     padding: 10px;
-    color: rgb(213, 156, 236);
+    color: rgb(239, 219, 248);
     text-align: center;
-    background-color: rgb(108, 27, 139);
+    background-color: rgb(47, 5, 59);
   }
   h1{
     font-family: 'Macondo', cursive;
     text-align: center;
-    background-color: rgb(238, 170, 247)
+    background-color: rgb(104, 39, 112);
+    color: rgb(239, 219, 248);
+    padding: 15px;
+    border: 8px dashed rgb(47, 5, 59);
+    border-radius: 25px;
   }
-  
-   background-color: rgb(238, 170, 247)
- 
+
+  #title {
+    font-family: 'Fjalla One', sans-serif;
+  }
+
+  #desc {
+    font-family: 'Bad Script', cursive;
+  }
+  p {
+    font-family: 'Fjalla One', sans-serif;
+  }
+  #phrase {
+    font-family: 'Bad Script', cursive;
+    text-align: center;
+    font-size: 25px;
+  }
+  .container{
+   background-color: rgb(239, 219, 248);
+  }
+  button{
+    border: 2px dashed rgb(47, 5, 59);
+    border-radius: 25px;
+    background-color:rgb(245, 240, 247);
+    color: rgb(47, 5, 59);
+    font-family: 'Fjalla One', sans-serif;
+    padding: 5px;
+    margin-bottom: 5px;
+  }
